# chest-xray-classification-ramygadalla

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Report_RamyGadalla.md  download_data.py  environment.yml  pyproject.toml  requirements.txt
app/: serve.py
chestxray_module/: __init__.py  dataset.py  download_data.py  extract_reference_stats.py  features.py  lung_segment_model.py  lungsegmodels.py  plots.py
chestxray_module/modeling/: evaluate.py  export_onnx.py  monitor.py  predict.py  train.py
data/interim/: class_split_counts.csv  file_duplicates.csv  image_blockiness_metrics.csv  image_foreground_area_ratio_contours.csv  image_left_right_ssim.csv  image_quality_metrics.csv  image_rgb_intensity.csv  image_sizes.csv
data/interim/cleaned_data/: class_distribution.csv
data/raw/: paths_to_delete.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_model.onnx
notebooks/: 01_ExploratoryDataAnaylsis.ipynb  02_Preprocess.ipynb  dev_evaluate.ipynb  dev_monitoring.ipynb  dev_predict.ipynb  dev_segmentation.ipynb  dev_training.ipynb  evaluate_dev.ipynb  fine-tune-unet.ipynb  monitor.py  monitoring.ipynb  predict.ipynb  segmentation_dev.ipynb  training_dev.ipynb
references/: feature_centroid.npy  pixel_histograms.npz  pixel_stats.npz
reports/: confusion_matrix.csv  metrics_report.csv
reports/best_model/eval_reports/: classification_report.csv  (+2 more)
reports/inference/: prediction.csv
reports/model_with_duplicates_images/: confusion_matrix.csv
reports/model_with_duplicates_unused/: metrics_report.csv
reports/prediction/: prediction.csv
(+4 files in other folders)
